<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewzUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_about">About</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_help">Help</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="news_image">News Image</string>
    <string name="news_title">Title</string>
    <string name="news_content">Content</string>
    <string name="news_time">Time</string>
    <string name="news_expand">Expand</string>
    <string name="news_comment">Comment</string>
    <string name="user_name">User</string>
    
    <string name="dummy">Dummy</string>
    
    <string name="category_prompt">Choose a category</string>
    <string-array name="category_arrays">
        <item>Top</item>
        <item>India</item>
        <item>Economy</item>
        <item>Politics</item>
        <item>World</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Sports</item>
    </string-array>
    
    <string-array name="category_post_array">
        <item>India</item>
        <item>Economy</item>
        <item>Politics</item>
        <item>World</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Sports</item>
    </string-array>
    
    <string name="help_post_news">Submit news articles from here.</string>
    <string name="help_expand_title">Tap on news title to read short paragraph.</string>
    <string name="help_tags">Tap on tags to read related news articles.</string>
    <string name="help_expand_news">Tap on paragraph text to read full article.</string>
    <string name="help_swipe_categories">Swipe Left or Right to change news category.</string>
    <string name="ok">Okay</string>
</resources>