<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <RelativeLayout
        android:id="@+id/commentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- ListRow Left side Thumbnail image -->
        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/image_bg"
            android:padding="3dip" >

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="75dip"
                android:layout_height="50dip"
                android:contentDescription="@string/news_image"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <!-- Username -->
        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail"
            android:text="@string/user_name"
            android:textColor="#040404"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <!-- Comment -->
        <TextView
            android:id="@+id/comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="1dip"
            android:layout_toRightOf="@+id/thumbnail"
            android:text="@string/news_comment"
            android:textColor="#343434"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_below="@id/commentLayout"
        android:background="#e1e1e1" />

    <RelativeLayout
        android:id="@+id/FooterLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator" >

        <RelativeLayout
            android:id="@+id/NewsInnerRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/commentDislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColor="#040404"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/commentLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/commentDislike"
                android:textColor="#040404"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>