<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <RelativeLayout
        android:id="@+id/postLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Title Of News -->
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/thumbnail"
            android:layout_toLeftOf="@id/thumbnail"
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="16sp"
            android:textStyle="bold"
            android:minLines="3"
            android:layout_gravity="end"
            android:textAlignment="viewEnd"
            android:typeface="sans" />

        <!-- ListRow Left side Thumbnail image -->
        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip" >

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="120dip"
        		android:layout_height="90dip"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/news_image"
                android:background="@drawable/image_background"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/postLayout"
        android:layout_marginTop="2dp"
        android:background="#e1e1e1" />

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator" >

        <TextView
            android:id="@+id/news_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:lineSpacingMultiplier="1.5" 
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="15sp"
            android:typeface="sans" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/news_expand"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <View
        android:id="@+id/tagsSeparator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/contentLayout"
        android:layout_marginTop="2dp"
        android:background="#e1e1e1" />
    
    <!-- Tags -->
        <TextView
            android:id="@+id/tags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagsSeparator"
            android:layout_marginEnd="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:clickable="true"
            android:text="@string/news_content"
            android:textColor="#343434"
            android:textSize="14sp" />
        
    <View
        android:id="@+id/contentSeparator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/tags"
        android:background="#e1e1e1" />

    <RelativeLayout
        android:id="@+id/NewsInnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentSeparator"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp" >

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />
        
        <TextView
            android:id="@+id/provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/postDislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/postLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/postDislike"
            android:text="@string/news_title"
            android:textColor="#040404"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </RelativeLayout>

</RelativeLayout>